1.10/cli/command-reference/dcos-cluster/index.md
---
post_title: dcos cluster
menu_order: 1
---

# Description
This command manages your DC/OS clusters.

# Usage

```bash
dcos cluster
```

# Options

| Name, shorthand | Default | Description |
|---------|-------------|-------------|
| `--help, h`   |             |  Print usage. |
| `--info`   |             |  Print a short description of this subcommand. |
| `--version, v`   |             | Print version information. |

# Child commands

| Command | Description |
|---------|-------------|
| [dcos cluster attach](/docs/1.10/cli/command-reference/dcos-cluster/dcos-cluster-attach/)   |   Connect to DC/OS clusters.  |  
| [dcos cluster list](/docs/1.10/cli/command-reference/dcos-cluster/dcos-cluster-list/)   |  List the clusters that are connect to the DC/OS CLI.  |  
| [dcos cluster remove](/docs/1.10/cli/command-reference/dcos-cluster/dcos-cluster-remove/)   |  Remove a configured cluster from the DC/OS CLI.   |  
| [dcos cluster rename](/docs/1.10/cli/command-reference/dcos-cluster/dcos-cluster-rename/)   |  Rename a cluster in the DC/OS CLI.  |  
| [dcos cluster setup](/docs/1.10/cli/command-reference/dcos-cluster/dcos-cluster-setup/)   |  Configure the CLI to communicate with your DC/OS cluster.  |  
